--- a/index.html
+++ b/index.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
+<head>
+    <meta charset="UTF-8">
+    <title>De Toekomst van Nederland - Home</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
 
-<h1>My First Heading</h1>
+<header>
+    <h1>De Toekomst van Nederland</h1>
+</header>
 
-<p>My first paragraph.</p>
+<div id="breaking-news">
+    <strong>Breaking News:</strong> Nieuwe onderwijsprogramma's en technologie verbeteren de Nederlandse verzorgingsstaat!
+</div>
+
+<nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="onderwijs.html">Onderwijs</a></li>
+        <li><a href="gezondheidszorg.html">Gezondheidszorg</a></li>
+        <li><a href="sz.html">Sociale Zekerheid</a></li>
+        <li><a href="extras.html">Extra's</a></li>
+    </ul>
+</nav>
+
+<div class="container">
+    <article>
+        <h2>Welkom in 2040: een vernieuwde verzorgingsstaat</h2>
+        <p>Na jaren van economische onzekerheid en personeelstekorten staat Nederland er in 2040 stabiel en vooruitstrevend voor. Door gerichte investeringen in onderwijs, gezondheidszorg en sociale zekerheid is het gelukt om welzijn en welvaart beter te combineren.</p>
+        <p>De overheid heeft een actieve rol gekozen en werkt samen met burgers, bedrijven en maatschappelijke organisaties. Dankzij slimme inzet van <strong>automatisering</strong>, <strong>robotisering</strong> en internationale samenwerking binnen de <strong>globalisering</strong> blijft de verzorgingsstaat betaalbaar en toegankelijk.</p>
+        <p>Op deze website lees je hoe het onderwijs, de gezondheidszorg en de sociale zekerheid zich hebben ontwikkeld in 2040 en hoe zij elkaar versterken.</p>
+    </article>
+</div>
+
+<footer>
+    &copy; 2040 De Toekomst van Nederland | Alle rechten voorbehouden
+</footer>
 
 </body>
 </html>
-
