--- a/index.html
+++ b/index.html
@@ -21,14 +21,17 @@
     </div>
 
     <!-- Breaking news ticker -->
-    <div id="breaking-news">
-        <span>Breaking News:</span>
-        <p>
-            Nieuwe onderwijsprogramma's en technologie verbeteren de Nederlandse verzorgingsstaat! &nbsp;|&nbsp; 
-            Robotisering in de zorg vermindert werkdruk en verhoogt kwaliteit van zorg! &nbsp;|&nbsp; 
-            Sociale zekerheid biedt nu zekerheid voor flexwerkers en zzp’ers!
-        </p>
-    </div>
+        <div id="breaking-news">
+         <span>Breaking News:</span>
+          <p>
+             Nieuwe onderwijsprogramma's en technologie verbeteren de Nederlandse verzorgingsstaat!
+             <img src="images/MON wereldbol.svg" alt="Wereldbol" class="ticker-icon">
+             Robotisering in de zorg vermindert werkdruk en verhoogt kwaliteit van zorg!
+             <img src="images/MON wereldbol.svg" alt="Wereldbol" class="ticker-icon">
+             Sociale zekerheid biedt nu zekerheid voor flexwerkers en zzp’ers!
+          </p>
+        </div>
+
 </header>
 
 <!-- Navigatie -->
