--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="header-top">
         <!-- Logo -->
         <div class="logo">
-            <img src="images/MON logo.svg" alt="MON Logo">
+            <img src="MON logo.svg" alt="MON Logo">
         </div>
 
         <!-- Datum en tijd -->
@@ -25,9 +25,9 @@
         <span>Breaking News:</span>
         <p>
             Nieuwe onderwijsprogramma's en technologie verbeteren de Nederlandse verzorgingsstaat!
-            <img src="images/MON wereldbol.svg" alt="Wereldbol" class="ticker-icon">
+            <img src="MON wereldbol.svg" alt="Wereldbol" class="ticker-icon">
             Robotisering in de zorg vermindert werkdruk en verhoogt kwaliteit van zorg!
-            <img src="images/MON wereldbol.svg" alt="Wereldbol" class="ticker-icon">
+            <img src="MON wereldbol.svg" alt="Wereldbol" class="ticker-icon">
             Sociale zekerheid biedt nu zekerheid voor flexwerkers en zzp’ers!
         </p>
     </div>
