--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="header-top">
         <!-- Logo -->
         <div class="logo">
-            <img src="MON logo.svg" alt="MON Logo">
+            <img src="MON logo - wit.svg" alt="MON Logo">
         </div>
 
         <!-- Datum en tijd -->
