--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <li><a href="onderwijs.html">Onderwijs</a></li>
         <li><a href="gezondheidszorg.html">Gezondheidszorg</a></li>
         <li><a href="sz.html">Sociale Zekerheid</a></li>
+        <li><a href="weer.html">Weer</a></li>
         <li><a href="extras.html">Extra's</a></li>
     </ul>
 </nav>
