--- a/weer.html
+++ b/weer.html
@@ -13,7 +13,7 @@
     <div class="header-top">
         <!-- Logo -->
         <div class="logo">
-            <img src="images/MON logo.svg" alt="MON Logo">
+            <img src="MON logo.svg" alt="MON Logo">
         </div>
 
         <!-- Datum en tijd -->
@@ -26,9 +26,9 @@
         <div class="ticker-wrapper">
             <div class="ticker-content" id="ticker-content">
                 Nieuwe weersverwachtingen voor Nederland vandaag!
-                <img src="images/MON wereldbol.svg" alt="Wereldbol" class="ticker-icon">
+                <img src="MON wereldbol.svg" alt="Wereldbol" class="ticker-icon">
                 Zon en lichte regenbuien wisselen elkaar af in verschillende provincies.
-                <img src="images/MON wereldbol.svg" alt="Wereldbol" class="ticker-icon">
+                <img src="MON wereldbol.svg" alt="Wereldbol" class="ticker-icon">
             </div>
         </div>
     </div>
