--- a/weer.html
+++ b/weer.html
@@ -53,7 +53,7 @@
 
     <div class="sidebar">
         <h3>Weertips</h3>
-        <p>Neem een paraplu mee bij regenachtige dagen en draag zonnebrand op zonnige momenten. Blijf op de hoogte van het weer via MON Weer.</p>
+        <p>Neem een paraplu mee bij regenachtige dagen en draag zonnebrand op zonnige momenten. Blijf op de hoogte van het weer via onze eigen MON Weer-pagina.</p>
     </div>
 
 </div>
