--- a/weer.html
+++ b/weer.html
@@ -47,7 +47,7 @@
         <h2>Actueel Weer Nederland</h2>
         <img src="Weer.png" alt="Weerbeeld Nederland" class="weather-img">
         <p>
-            Op deze afbeelding zie je de weersituatie in Nederland vandaag. In het zuiden is het voornamelijk zonnig met temperaturen tussen de 19°C en 22°C, terwijl het in het noorden maximaal 18°C wordt.
+            Op deze afbeelding zie je de weersituatie in Nederland morgen. In het zuiden is het voornamelijk zonnig met temperaturen tussen de 19°C en 22°C, terwijl het in het noorden maximaal 18°C wordt.
         </p>
     </article>
 
