--- a/weer.html
+++ b/weer.html
@@ -12,7 +12,7 @@
 <header>
     <div class="header-top">
         <div class="logo">
-            <img src="images/MON logo.svg" alt="MON Logo">
+            <img src="MON logo.svg" alt="MON Logo">
         </div>
         <div class="date-time" id="date-time"></div>
     </div>
@@ -23,7 +23,7 @@
         <div class="ticker-wrapper">
             <div class="ticker-content" id="ticker-content">
                 Vandaag zonnig in het zuiden, bewolkt in het noorden.
-                <img src="images/MON wereldbol.svg" alt="Wereldbol" class="ticker-icon">
+                <img src="MON wereldbol.svg" alt="Wereldbol" class="ticker-icon">
             </div>
         </div>
     </div>
