--- a/gezondheidszorg.html
+++ b/gezondheidszorg.html
@@ -11,9 +11,6 @@
     <h1>De Toekomst van Nederland</h1>
 </header>
 
-<div id="breaking-news">
-    <strong>Breaking News:</strong> Robotisering in ziekenhuizen vermindert werkdruk en verhoogt kwaliteit van zorg!
-</div>
 
 <nav>
     <ul>
@@ -25,6 +22,23 @@
         <li><a href="extras.html">Extra's</a></li>
     </ul>
 </nav>
+
+    <!-- Breaking news ticker -->
+    <div id="breaking-news">
+        <span>Breaking News:</span>
+        <div class="ticker-wrapper">
+            <div class="ticker-content" id="ticker-content">
+                Nieuwe onderwijsprogramma's en technologie verbeteren de Nederlandse verzorgingsstaat!
+                <img src="MON wereldbol.svg" alt="Wereldbol" class="ticker-icon">
+                Robotisering in de zorg vermindert werkdruk en verhoogt kwaliteit van zorg!
+                <img src="MON wereldbol.svg" alt="Wereldbol" class="ticker-icon">
+                Sociale zekerheid biedt nu zekerheid voor flexwerkers en zzp’ers!
+                <img src="MON wereldbol.svg" alt="Wereldbol" class="ticker-icon">
+                Innovaties in woningmarkt en digitalisering ondersteunen een bloeiende economie!
+                <img src="MON wereldbol.svg" alt="Wereldbol" class="ticker-icon">
+            </div>
+        </div>
+    </div>
 
 <div class="container main-content">
     <article>
