--- a/weer.html
+++ b/weer.html
@@ -12,7 +12,7 @@
 <header>
     <div class="header-top">
         <div class="logo">
-            <img src="MON logo.svg" alt="MON Logo">
+            <img src="MON logo - wit.svg" alt="MON Logo">
         </div>
         <div class="date-time" id="date-time"></div>
     </div>
