--- a/gezondheidszorg.html
+++ b/gezondheidszorg.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Gezondheidszorg 2040</title>
+    <link rel="icon" type="image/svg+xml" href="MON wereldbol.svg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
