--- a/weer.html
+++ b/weer.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weerbericht Nederland - MON</title>
+    <link rel="icon" type="image/svg+xml" href="MON wereldbol.svg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
