--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
     </ul>
 </nav>
 
+<!-- Uitleg over de website -->
+<section class="intro">
+    <h1>Welkom bij "De Toekomst van Nederland"</h1>
+    <p>Deze website biedt een uitgebreide blik op de toekomst van Nederland in 2040, waarin belangrijke sectoren zoals onderwijs, gezondheidszorg en sociale zekerheid een vernieuwde vorm hebben gekregen. Door slimme innovaties, technologie en samenwerking zijn deze sectoren sterk verbeterd en bieden ze een solide basis voor een bloeiende samenleving.</p>
+    <p>Ontdek hoe deze veranderingen onze toekomst beïnvloeden en hoe wij als samenleving profiteren van vooruitgang in technologie, robotisering, en globalisering.</p>
+    <div class="logo-container">
+        <img src="MON logo - wit.svg" alt="MON Logo" class="logo">
+    </div>
+</section>
+
 <!-- Breaking news ticker -->
 <section id="breaking-news">
     <span>Breaking News:</span>
