--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 <!-- Footer -->
 <footer>
-    &copy; 2040 De Toekomst van Nederland | Alle rechten voorbehouden
+    &copy; 2040 Maatschappelijke Omroep Nederland | Alle rechten voorbehouden
 </footer>
 
 <!-- JavaScript: datum/tijd + ticker -->
