--- a/weer.html
+++ b/weer.html
@@ -31,22 +31,22 @@
     </ul>
 </nav>
 
-    <!-- Breaking news ticker -->
-    <div id="breaking-news">
-        <span>Breaking News:</span>
-        <div class="ticker-wrapper">
-            <div class="ticker-content" id="ticker-content">
-                Nieuwe onderwijsprogramma's en technologie verbeteren de Nederlandse verzorgingsstaat!
-                <img src="MON wereldbol.svg" alt="Wereldbol" class="ticker-icon">
-                Robotisering in de zorg vermindert werkdruk en verhoogt kwaliteit van zorg!
-                <img src="MON wereldbol.svg" alt="Wereldbol" class="ticker-icon">
-                Sociale zekerheid biedt nu zekerheid voor flexwerkers en zzp’ers!
-                <img src="MON wereldbol.svg" alt="Wereldbol" class="ticker-icon">
-                Innovaties in woningmarkt en digitalisering ondersteunen een bloeiende economie!
-                <img src="MON wereldbol.svg" alt="Wereldbol" class="ticker-icon">
-            </div>
+<!-- Breaking news ticker -->
+<section id="breaking-news">
+    <span>Breaking News:</span>
+    <div class="ticker-wrapper">
+        <div class="ticker-content" id="ticker-content">
+            Nieuwe onderwijsprogramma's en technologie verbeteren de Nederlandse verzorgingsstaat!
+            <img src="MON wereldbol.svg" alt="Wereldbol" class="ticker-icon">
+            Robotisering in de zorg vermindert werkdruk en verhoogt kwaliteit van zorg!
+            <img src="MON wereldbol.svg" alt="Wereldbol" class="ticker-icon">
+            Sociale zekerheid biedt nu zekerheid voor flexwerkers en zzp’ers!
+            <img src="MON wereldbol.svg" alt="Wereldbol" class="ticker-icon">
+            Innovaties in woningmarkt en digitalisering ondersteunen een bloeiende economie!
+            <img src="MON wereldbol.svg" alt="Wereldbol" class="ticker-icon">
         </div>
     </div>
+</section>
 
 <!-- Hoofdcontent -->
 <div class="container main-content">
