--- a/gezondheidszorg.html
+++ b/gezondheidszorg.html
@@ -2,17 +2,24 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>Gezondheidszorg 2040</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>De Toekomst van Nederland - Home</title>
     <link rel="icon" type="image/svg+xml" href="MON wereldbol.svg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+<!-- Header -->
 <header>
-    <h1>De Toekomst van Nederland</h1>
+    <div class="header-top">
+        <div class="logo">
+            <img src="MON logo - wit.svg" alt="MON Logo">
+        </div>
+        <div class="date-time" id="date-time"></div>
+    </div>
 </header>
 
-
+<!-- Navigatie -->
 <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
@@ -41,22 +48,24 @@
     </div>
 </section>
 
+<!-- Hoofdcontent -->
 <div class="container main-content">
     <article>
-        <h2>Gezond ouder worden in Nederland</h2>
-        <p>Door de toenemende <strong>vergrijzing</strong> stond de zorg jarenlang onder druk. In 2040 is de zorg toekomstbestendig georganiseerd.</p>
-        <p><strong>Robotisering</strong> ondersteunt verpleegkundigen bij tillen en medicatie. Hierdoor blijft er meer tijd voor persoonlijk contact met patiënten. Ouderen wonen langer zelfstandig dankzij slimme technologie.</p>
-        <p>De overheid beperkt <strong>marktwerking</strong> in de zorg, zodat basiszorg betaalbaar blijft voor iedereen. Preventieve zorg voorkomt dat problemen te laat worden ontdekt.</p>
+        <h2>Welkom in 2040: een vernieuwde verzorgingsstaat</h2>
+        <p>Na jaren van economische onzekerheid en personeelstekorten staat Nederland er in 2040 stabiel en vooruitstrevend voor. Door gerichte investeringen in onderwijs, gezondheidszorg en sociale zekerheid is het gelukt om welzijn en welvaart beter te combineren.</p>
+        <p>De overheid heeft een actieve rol gekozen en werkt samen met burgers, bedrijven en maatschappelijke organisaties. Dankzij slimme inzet van <strong>automatisering</strong>, <strong>robotisering</strong> en internationale samenwerking binnen de <strong>globalisering</strong> blijft de verzorgingsstaat betaalbaar en toegankelijk.</p>
+        <p>Op deze website lees je hoe het onderwijs, de gezondheidszorg en de sociale zekerheid zich hebben ontwikkeld in 2040 en hoe zij elkaar versterken. Daarnaast lees je over innovaties in de woningmarkt, technologie en arbeid die bijdragen aan een sterke samenleving.</p>
     </article>
 
     <div class="sidebar">
         <h3>Extra info</h3>
-        <p>Investeringen in technologie en personeel hebben de kwaliteit van leven voor ouderen sterk verbeterd.</p>
+        <p>Investeringen in onderwijs, gezondheidszorg en sociale zekerheid hebben geleid tot een samenleving waarin mensen langer zelfstandig en gezond kunnen leven. Technologie ondersteunt professionals en burgers zonder dat persoonlijke aandacht verloren gaat.</p>
     </div>
 </div>
 
+<!-- Footer -->
 <footer>
-    &copy; 2040 De Toekomst van Nederland | Alle rechten voorbehouden
+    &copy; 2040 Maatschappelijke Omroep Nederland | Alle rechten voorbehouden
 </footer>
 
 <!-- JavaScript: datum/tijd + ticker -->
