--- a/sz.html
+++ b/sz.html
@@ -2,17 +2,24 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sociale Zekerheid 2040</title>
     <link rel="icon" type="image/svg+xml" href="MON wereldbol.svg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+<!-- Header -->
 <header>
-    <h1>De Toekomst van Nederland</h1>
+    <div class="header-top">
+        <div class="logo">
+            <img src="MON logo - wit.svg" alt="MON Logo">
+        </div>
+        <div class="date-time" id="date-time"></div>
+    </div>
 </header>
 
-
+<!-- Navigatie -->
 <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
@@ -41,6 +48,7 @@
     </div>
 </section>
 
+<!-- Hoofdcontent -->
 <div class="container main-content">
     <article>
         <h2>Zekerheid in een flexibele samenleving</h2>
@@ -55,6 +63,7 @@
     </div>
 </div>
 
+<!-- Footer -->
 <footer>
     &copy; 2040 De Toekomst van Nederland | Alle rechten voorbehouden
 </footer>
